[project]
name = "m5-forecasting-uncertainty"
version = "0.1.0"
description = "MOPKIN, adaptive methods for quantile forecasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pmdarima>=2.1.1",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "sktime>=0.40.1",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]
